<?xml version="1.0"?>
<package format="3">
  <name>point_lio</name>
  <version>0.0.0</version>

  <description>
    2233
  </description>

  <maintainer email="222@3333.com">2233</maintainer>

  <license>BSD</license>

  <author email="222@3333.com">2233</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>tf2</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>eigen_conversions</depend>
  <depend>common_interfaces</depend>

  <depend>livox_ros_driver2</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>